# Replit-Contract-Checklist

./: .gitignore  .replit  app.py  load_excel.py  pyproject.toml  replit.md
attached_assets/: CR Check List - Latest Format_1760583521780.xlsx
static/css/: style.css
templates/: admin_dashboard.html  base.html  checklist.html  login.html  user_dashboard.html
