[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "werkzeug>=3.1.3",
    "pillow>=12.0.0",
]
